Release 2.5
-----------
* removes deprecatd MANUAL_TRIGGERS
* drop support Django 2.x
* drop support python 3.8


Release 2.4
-----------
* add support Django 4
* add support Python 3.10


Release 2.3
-----------
* Removes code producing DeprecationError
* add :setting:`AUTO_CREATE_TRIGGERS`  and deprecate :setting:`MANUAL_TRIGGERS`
* add support for Postgres 13
* add ability to customise SQL to create triggers :setting:`TRIGGERS_FACTORY`

Release 2.2
-------------
* drop suppot django<3.0
* drop suppot Python<3.6


Release 2.1.1
-------------
* fixes packaging

Release 2.1 ( not released on pypi)
-----------------------------------
* drop support Python < 3.5
* add support Django 2.2 / 3.0
* drop support Django < 1.11


Release 2.0
-----------
* drop official support to Django < 1.10
* add support Django 2.1
* removed deprecated api `concurrency_check`
* BACKWARD INCOMPATIBLE: version field is now mandatory in any save operation. Use ``VERSION_FIELD_REQUIRED=False`` to have the old behaviour.
* `disable_concurrency` now has `start()`, `finish()` to be called as command


Release 1.4 (13 Sep 2016)
-------------------------
* closes :issue:`81`. Add docs and check.
* fixes :issue:`80`. (thanks Naddiseo for the useful support)
* Django 1.11 compatibility
* some minor support for Django 2.0


Release 1.3.2 (10 Sep 2016)
---------------------------
* fixes bug in ConditionalVersionField that produced 'maximum recursion error' when a model had a ManyToManyField with a field to same model (self-relation)


Release 1.3.1 (15 Jul 2016)
---------------------------
* just packaging


Release 1.3 (15 Jul 2016)
-------------------------
* drop support for Python < 3.3
* add support Django>=1.10
* change license
* fixes :issue:`36`. (thanks claytondaley)
* new :setting:`IGNORE_DEFAULT` to ignore default version number


Release 1.2 (05 Apr 2016)
-------------------------
* better support for django 1.9 ( ``TemplateDoesNotExist`` is now in ``django.template.exceptions``