@@ -1,3 +1,8 @@
+(dev)
+-----
+* BUG FIX: fixes check() implementation
+
+
 Release 2.5
 -----------
 * removes deprecatd MANUAL_TRIGGERS
